Fix line spacing

--- a/app/javascript/styles/chillstep/diff.scss
+++ b/app/javascript/styles/chillstep/diff.scss
@@ -3,6 +3,10 @@ body {
     font-size: 16px;
 }
 
+.getting-started__footer {
+    line-height: 1.4em;
+}
+
 .drawer__header {
     margin-bottom: 0;
 }
